# wagtail-waffle

./: LICENSE  MANIFEST.in  README.md  setup.cfg
wagtail_waffle/: apps.py  bulk_actions.py  views.py  wagtail_hooks.py
wagtail_waffle/templates/waffle/: action.html  index.html
